Tue Nov 20 21:01:16 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (incs): BSD make cannot deal with non-prefixed dependency
	  and prefixed target.

Tue Nov 20 20:10:23 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_bsearch): fix rdoc bug (O(n log n) -> O(log n)).
	  Patch by Charlie Somerville.  [ruby-core:49661] [Bug #7409]

	* range.c (range_bsearch): ditto.

Tue Nov 20 19:02:44 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: rename and add TracePoint APIs.
	  (1) TracePoint.new(...){...} creates a new trace point
	      but does not make it enable.
	  (2) TracePoint.trace(...){...} creats a new trace point
	      and enable it (same as old behavior).
	  (3) TracePoint#enable make it enable (renamed from TracePoint#retrace).
	      If block given, when enable only in block.
	  (4) TracePoint#disable make it disable (renamed from TracePoint#untrace).
	      If block given, when disable only in block.
	  (5) TracePoint#enabled? returns this trace is enable or not.
	  [Feature #6895]

	* test/ruby/test_settracefunc.rb: addd tests.

Tue Nov 20 18:35:05 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: add two methods:
	  (1) TracePoint#return_value which returns return
	      value on the :return and :c_return event.
	  (2) TracePoint#raised_exception which returns raised exception
	      value on the :raise event.
	  Eeach methods raise RuntimeError if it is called at unsupported
	  event.
	  Please review and give us feedback until next preview
	  release (Dec/2012) of Ruby 2.0.0.
	  [Feature #6895]

	* insns.def, vm.c, vm_eval.c, vm_insnhelper.c, eval.c, thread.c:
	  ditto.

	* vm_trace.c, vm_core.h: move definition of rb_trace_arg_t from
	  vm_trace.c to vm_core.h.
	  Caller fills rb_trace_arg_t and pass the pointer of this variable.

	* test/ruby/test_settracefunc.rb: fix tests to test this change.

Tue Nov 20 17:31:12 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: fix dtrace didn't work on darwin.
